# visual_and_intrusive_profiling_presentation

./: AI_summary.md  LICENSE  LICENSE.md  Makefile  README.md  presentation.tex
docker/: Dockerfile
examples/nvtx/: .gitignore  CMakeLists.txt  main.cxx
examples/nvtx/example_report/: report3.nsys-rep
examples/tracy/: CMakeLists.txt  build.bash  main.cxx
scripts/: docker_build.bash  docker_common.bash  docker_interactive.bash  make.bash
